--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -25,6 +25,14 @@ spring.web.resources.static-locations=classpath:/webapp/resources/
 caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/crm-web  
 #spring.security.enable-csrf=false
 
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=crm.mekongsolution@gmail.com
+spring.mail.password=exfc mvlv ltbp qyfc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
 productList.colWidths=10, 100, 100, 100, 100, 100, 150
