--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -71,6 +71,20 @@
 			mới nhất -->
 		</dependency>
 		
+		<!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
