--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -152,6 +152,14 @@
             <version>5.5.7</version>
         </dependency>
 
+		<!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
