--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -72,18 +72,52 @@
 		</dependency>
 		
 		<!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.boot</groupId>-->
+<!--		    <artifactId>spring-boot-starter-mail</artifactId>-->
+<!--		    <version>2.5.4</version>-->
+<!--		    <exclusions>-->
+<!--		        <exclusion>-->
+<!--		            <groupId>org.apache.logging.log4j</groupId>-->
+<!--		            <artifactId>log4j-to-slf4j</artifactId>-->
+<!--		        </exclusion>-->
+<!--		    </exclusions>-->
+<!--		</dependency>-->
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+			<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-context</artifactId>
+			    <version>6.2.2</version>
+			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-context-support</artifactId>
+			    <version>6.2.2</version>
+			</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>3.4.1</version>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.6.2</version>
 		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+		<dependency>
+		    <groupId>jakarta.mail</groupId>
+		    <artifactId>jakarta.mail-api</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
+
 		
 	</dependencies>
 	<build>
