--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -153,11 +153,17 @@
         </dependency>
 
 		<!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>3.4.1</version>
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.boot</groupId>-->
+<!--		    <artifactId>spring-boot-starter-mail</artifactId>-->
+<!--		    <version>2.5.4</version>-->
+<!--		    <exclusions>-->
+<!--		        <exclusion>-->
+<!--		            <groupId>org.apache.logging.log4j</groupId>-->
+<!--		            <artifactId>log4j-to-slf4j</artifactId>-->
+<!--		        </exclusion>-->
+<!--		    </exclusions>-->
+<!--		</dependency>-->
 
 
 	</dependencies>
