--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -84,19 +84,20 @@
 <!--		    </exclusions>-->
 <!--		</dependency>-->
 <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-			<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-			<dependency>
-			    <groupId>org.springframework</groupId>
-			    <artifactId>spring-context</artifactId>
-			    <version>6.2.2</version>
-			</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context</artifactId>
+		    <version>5.3.18</version>
+		</dependency>
 			
-			<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
-			<dependency>
-			    <groupId>org.springframework</groupId>
-			    <artifactId>spring-context-support</artifactId>
-			    <version>6.2.2</version>
-			</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>5.3.18</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
 		<dependency>
@@ -117,6 +118,23 @@
 		    <artifactId>jakarta.mail-api</artifactId>
 		    <version>2.1.3</version>
 		</dependency>
+		
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+<!--			        <version>4.0.1</version>-->
+<!--			         <scope>provided</scope> -->
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+<!--		<dependency>-->
+<!--		    <groupId>jakarta.servlet</groupId>-->
+<!--		    <artifactId>jakarta.servlet-api</artifactId>-->
+<!--		    <version>5.0.0</version>-->
+<!--		    <scope>provided</scope>-->
+<!--		</dependency>-->
+
 
 		
 	</dependencies>
