--- a/web/pom.xml
+++ b/web/pom.xml
@@ -267,32 +267,32 @@
 <!--			    <version>6.2.2</version>-->
 <!--			</dependency>-->
 			
-<!--			 https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
-<!--			<dependency>-->
-<!--			    <groupId>org.springframework</groupId>-->
-<!--			    <artifactId>spring-context-support</artifactId>-->
-<!--			    <version>6.2.2</version>-->
-<!--			</dependency>-->
+<!--  https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>5.3.18</version>
+		</dependency>
 
-<!--		 https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
-<!--		<dependency>-->
-<!--		    <groupId>javax.mail</groupId>-->
-<!--		    <artifactId>javax.mail-api</artifactId>-->
-<!--		    <version>1.6.2</version>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
-<!--		<dependency>-->
-<!--			<groupId>com.sun.mail</groupId>-->
-<!--			<artifactId>javax.mail</artifactId>-->
-<!--			<version>1.6.2</version>-->
-<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.6.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 		
-<!--		 https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
-<!--		<dependency>-->
-<!--		    <groupId>jakarta.mail</groupId>-->
-<!--		    <artifactId>jakarta.mail-api</artifactId>-->
-<!--		    <version>2.1.3</version>-->
-<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+		<dependency>
+		    <groupId>jakarta.mail</groupId>
+		    <artifactId>jakarta.mail-api</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
