--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -85,17 +85,17 @@
 <!--		</dependency>-->
 <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-context</artifactId>
-		    <version>5.3.18</version>
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework</groupId>-->
+<!--		    <artifactId>spring-context</artifactId>-->
+<!--		    <version>5.3.27</version>-->
+<!--		</dependency>-->
 			
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context-support</artifactId>
-		    <version>5.3.18</version>
+		    <version>5.3.27</version>
 		</dependency>
 
 
@@ -105,35 +105,45 @@
 		    <artifactId>javax.mail-api</artifactId>
 		    <version>1.6.2</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
+			<scope>compile</scope>
 		</dependency>
-		
+
+
+	<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
+<!--		<dependency>-->
+<!--			<groupId>com.sun.mail</groupId>-->
+<!--			<artifactId>jakarta.mail</artifactId>-->
+<!--			<version>2.0.1</version>-->
+<!--		</dependency>-->
+
 		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
-		<dependency>
-		    <groupId>jakarta.mail</groupId>
-		    <artifactId>jakarta.mail-api</artifactId>
-		    <version>2.1.3</version>
-		</dependency>
-		
+<!--		<dependency>-->
+<!--		    <groupId>jakarta.mail</groupId>-->
+<!--		    <artifactId>jakarta.mail-api</artifactId>-->
+<!--		    <version>2.1.3</version>-->
+<!--		</dependency>-->
+
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-<!--			        <version>4.0.1</version>-->
-<!--			         <scope>provided</scope> -->
+			<!--			        <version>4.0.1</version>-->
+			<!--			         <scope>provided</scope> -->
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
-<!--		<dependency>-->
-<!--		    <groupId>jakarta.servlet</groupId>-->
-<!--		    <artifactId>jakarta.servlet-api</artifactId>-->
-<!--		    <version>5.0.0</version>-->
-<!--		    <scope>provided</scope>-->
-<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--		    <groupId>jakarta.servlet</groupId>-->
+		<!--		    <artifactId>jakarta.servlet-api</artifactId>-->
+		<!--		    <version>5.0.0</version>-->
+		<!--		    <scope>provided</scope>-->
+		<!--		</dependency>-->
 
 
 		
