--- a/web/pom.xml
+++ b/web/pom.xml
@@ -271,7 +271,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>5.3.18</version>
+			<version>5.3.27</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
@@ -285,14 +285,22 @@
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
+			<scope>compile</scope>
 		</dependency>
+
+	<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
+<!--		<dependency>-->
+<!--			<groupId>com.sun.mail</groupId>-->
+<!--			<artifactId>jakarta.mail</artifactId>-->
+<!--			<version>2.0.1</version>-->
+<!--		</dependency>-->
 		
 		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
-		<dependency>
-		    <groupId>jakarta.mail</groupId>
-		    <artifactId>jakarta.mail-api</artifactId>
-		    <version>2.1.3</version>
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>jakarta.mail</groupId>-->
+<!--		    <artifactId>jakarta.mail-api</artifactId>-->
+<!--		    <version>2.1.3</version>-->
+<!--		</dependency>-->
 		
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
 		<dependency>
