--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -17,9 +17,9 @@ hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 auto.ddl=true
-hibernate.show_sql=false
+hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=update
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
 
 spring.web.resources.static-locations=classpath:/webapp/resources/
