--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -41,10 +41,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
+# Customer Care Configuration
+customer.care.days-ago-case1 = 2
+
 logging.level.root=INFO
 logging.level.com.yourpackage=DEBUG
-
-
 
 productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
 productList.colWidths=10, 100, 100, 100, 100, 100, 150
