--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -42,7 +42,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # Customer Care Configuration
-customer.care.days-ago-case1 = 2
+customer.care.days-ago-case1 = 2 
+customer.care.max-care-days = 2
+
+
 
 logging.level.root=INFO
 logging.level.com.yourpackage=DEBUG
