--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -42,8 +42,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # Customer Care Configuration
+# Customer with mainStatus is MOI (To view on Customer Care Table and message)
 customer.care.days-ago-case1 = 2 
+
+# Maximum days to take care of customers with mainStatus is MOI                                                                        
 customer.care.max-care-days = 2
+
+#Customer with mainStatus is TIEM NANG (To view on Customer Care Table and message)
+customer.care.days-ago-case2 = 1
 
 
 
