--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -9,6 +9,11 @@ url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&c
 username@javax.sql.BaseDataSource=crm_user
 password@javax.sql.BaseDataSource=Crm@123
 
+#driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
+#url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_test_v2?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Ho_Chi_Minh"
+#username@javax.sql.BaseDataSource=crm_user_test_v2
+#password@javax.sql.BaseDataSource=Crm@123_test_v2
+
 hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
