--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
 			<artifactId>crm-jpa</artifactId>
-			<version>${module.version}</version>
+			<version>23.2</version>
 		</dependency>
 
 		<dependency>
